--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> Progate </title>
     </head>
     <body>
-        <h1 class="title">How to Make a Website with HTML & CSS on your computer</h1>
+        <h1 class="title">BEBEB GEMBIL</h1>
         <p> In this article you will learn to make a Website
             with HTML & CSS on your own computer instead of making
             it it the browser with Progate.
